Features:
 * Allow to pin variables in "Edit Variables" window.
 * Add a "Screenshot" tool to do high resolution map images.
   Screenshot could be made for the whole map or just a selected area.
   Available from the menu bar: "Options->Screenshot...".

Fixes:
 * Crush when editing variables.

Tweaks:
 * New application icon designed by Clément "Topy".
 * Allow to quickly change turfs dir in the tile popup.
 * Make the map parser algorithm more error-proof.
 * Move "Preferences" button under the "File" menu item.

-------------------------
 v1.1.0 (2020-04-18)
-------------------------

Features:
 * Add a built-in changelog. Auto-shown when updated. Could be opened with: "Help->Changelog...".
 * When creating a new map, "dmm" extension will be added automatically.
 * Replace "Show Icons" checkbox for "Environment Tree" with "Collapse All" button.
 * Add a tile popup widget for quick dir modification.

Fixes:
 * The old bug which was the reason for map corruptions.

Tweaks:
 * Remove "movable" options for turfs and areas.
 * Editor title will show the name of the currently opened environment.